force-app/main/default/objects/Product2/fields/ExpenseAllowanceProduct__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAllowanceProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expense %</label>
    <type>Checkbox</type>
</CustomField>