force-app/main/default/objects/Product2/fields/Intro__c.field-meta.xml
<CustomField>
    <fullName>Intro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro</label>
    <type>Checkbox</type>
</CustomField>