force-app/main/default/objects/Product2/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <label>Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>GBCH</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>SVH</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>BLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>