force-app/main/default/objects/Product2/fields/NotvalidforPM__c.field-meta.xml
<CustomField>
    <fullName>NotvalidforPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not valid for PM</label>
    <type>Checkbox</type>
</CustomField>