force-app/main/default/objects/Product2/fields/Outro__c.field-meta.xml
<CustomField>
    <fullName>Outro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outro</label>
    <type>Checkbox</type>
</CustomField>