force-app/main/default/objects/Product2/fields/ProductItemCheckboxInfo__c.field-meta.xml
<CustomField>
    <fullName>ProductItemCheckboxInfo__c</fullName>
    <formula>If(
ProjectManagementAllowanceProduct__c = true,&quot;PM Allowance %&quot;,
If(
ExpenseAllowanceProduct__c = true,&quot;Expense Allowance %&quot;,
IF(
Option__c = true, &quot;Option&quot;,
IF(
Intro__c = true, &quot;Intro&quot;,
If(
Outro__c = true, &quot;Outro&quot;,
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Item Checkbox Info</label>
    <type>Text</type>
</CustomField>