force-app/main/default/objects/Product2/fields/ProductSpecification__c.field-meta.xml
<CustomField>
    <fullName>ProductSpecification__c</fullName>
    <label>Product Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>