force-app/main/default/objects/Product2/fields/ProductSubType__c.field-meta.xml
<CustomField>
    <fullName>ProductSubType__c</fullName>
    <label>Product Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkTime</fullName>
                <label>Work Time</label>
            </value>
            <value>
                <fullName>TravelTime</fullName>
                <label>Travel Time</label>
            </value>
            <value>
                <fullName>3rdPartyCosts</fullName>
                <label>3rd Party Costs</label>
            </value>
            <value>
                <fullName>ProjectResourceCosts</fullName>
                <label>Project Resource Costs</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>LicenseDirect</fullName>
                <label>License (Direct)</label>
            </value>
            <value>
                <fullName>LicenseProvision</fullName>
                <label>License (Provision)</label>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>