force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>SupplierCosts</fullName>
                <label>Supplier Costs</label>
            </value>
            <value>
                <fullName>LicenseDirect</fullName>
                <label>License (Direct) / Trade</label>
            </value>
            <value>
                <fullName>LicenseProvision</fullName>
                <label>License (Provision)</label>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>