force-app/main/default/objects/Product2/fields/ProjectManagementAllowanceProduct__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAllowanceProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Management %</label>
    <type>Checkbox</type>
</CustomField>