force-app/main/default/objects/Product2/fields/SuperiorProduct__c.field-meta.xml
<CustomField>
    <fullName>SuperiorProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superior Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>