force-app/main/default/objects/Product2/validationRules/PR001_Entry_Invalid_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>PR001_Entry_Invalid_Group</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
ISPICKVAL(ProductType__c, &quot;Group&quot;),
OR(
ProjectManagementAllowanceProduct__c=true,
ExpenseAllowanceProduct__c=true,
Option__c=true,
Intro__c=true,
Outro__c=true
)
)</errorConditionFormula>
    <errorMessage>Invalid entry for Product Type &quot;Group&quot;
(PR001)</errorMessage>
</ValidationRule>