force-app/main/default/objects/Product2/validationRules/PR002_Entry_Invalid_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>PR002_Entry_Invalid_Text</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
ISPICKVAL(ProductType__c, &quot;Text&quot;),
OR(
ProjectManagementAllowanceProduct__c=true,
ExpenseAllowanceProduct__c=true,
Option__c=true
)
)</errorConditionFormula>
    <errorMessage>Invalid entry for Product Type &quot;Text&quot;
(PR002)</errorMessage>
</ValidationRule>