force-app/main/default/objects/Product2/validationRules/PR003_Entry_Invalid_Intro_Outro.validationRule-meta.xml
<ValidationRule>
    <fullName>PR003_Entry_Invalid_Intro_Outro</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
Intro__c=true,
Outro__c=true
)</errorConditionFormula>
    <errorMessage>Product can not be of Type Intro and Outro.
(PR003)</errorMessage>
</ValidationRule>