force-app/main/default/objects/Product2/validationRules/PR004_Entry_Invalid_Allowance.validationRule-meta.xml
<ValidationRule>
    <fullName>PR004_Entry_Invalid_Allowance</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
ProjectManagementAllowanceProduct__c =true,
ExpenseAllowanceProduct__c =true
)</errorConditionFormula>
    <errorMessage>Product can not be Project Management Allowance and Expense Allowance.
(PR004)</errorMessage>
</ValidationRule>