force-app/main/default/objects/Product2/validationRules/PR005_Entry_Invalid_Option.validationRule-meta.xml
<ValidationRule>
    <fullName>PR005_Entry_Invalid_Option</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
Option__c=true,
OR(
ProjectManagementAllowanceProduct__c =true,
ExpenseAllowanceProduct__c =true,
Intro__c=true,
Outro__c=true
)
)</errorConditionFormula>
    <errorMessage>Product can not be Option and of other kind.
(PR005)</errorMessage>
</ValidationRule>