force-app/main/default/objects/Product2/validationRules/PR006_Entry_Invalid_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>PR006_Entry_Invalid_Text</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
ISPICKVAL(ProductType__c,&quot;Text&quot;),
Intro__c=false,
Outro__c=false
)</errorConditionFormula>
    <errorMessage>Product Text must be of Intro or Outro.
(PR006)</errorMessage>
</ValidationRule>