force-app/main/default/objects/Product2/validationRules/PR007_Entry_Invalid_Superior_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>PR007_Entry_Invalid_Superior_Product</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(SuperiorProduct__c)),
NOT(ISPICKVAL(  SuperiorProduct__r.ProductType__c ,&quot;Group&quot;))
)</errorConditionFormula>
    <errorMessage>Superior Product must be of Product Type &quot;Group&quot;
(PR007)</errorMessage>
</ValidationRule>