force-app/main/default/objects/Product2/validationRules/PR008_Entry_Invalid_Superior_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>PR008_Entry_Invalid_Superior_Product</fullName>
    <active>true</active>
    <description>Checks for valid product combination data.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(SuperiorProduct__c)),
ISPICKVAL(ProductType__c ,&quot;Group&quot;)
)</errorConditionFormula>
    <errorDisplayField>SuperiorProduct__c</errorDisplayField>
    <errorMessage>Product Type &quot;Group&quot; cannot have a superior Product.
(PR008)</errorMessage>
</ValidationRule>