force-app/main/default/objects/Product2/listViews/All_Products_Active.listView-meta.xml
<ListView>
    <fullName>All_Products_Active</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Legal__c</columns>
    <columns>ProductType__c</columns>
    <columns>ProductSubType__c</columns>
    <columns>SortNr__c</columns>
    <columns>SuperiorProduct__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Intro__c</columns>
    <columns>Outro__c</columns>
    <columns>Option__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Products (Active)</label>
    <language>en_US</language>
</ListView>