force-app/main/default/objects/Product2/listViews/CY_Web.listView-meta.xml
<ListView>
    <fullName>CY_Web</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductType__c</columns>
    <columns>ProductSubType__c</columns>
    <columns>SortNr__c</columns>
    <columns>SuperiorProduct__c</columns>
    <columns>ProjectManagementAllowanceProduct__c</columns>
    <columns>ExpenseAllowanceProduct__c</columns>
    <columns>Option__c</columns>
    <columns>Intro__c</columns>
    <columns>Outro__c</columns>
    <columns>Legal__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Legal__c</field>
        <operation>equals</operation>
        <value>CY</value>
    </filters>
    <label>CY - Web</label>
    <language>en_US</language>
</ListView>