force-app/main/default/objects/Product2/listViews/HBC_BRAND_DESIGN.listView-meta.xml
<ListView>
    <fullName>HBC_BRAND_DESIGN</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductType__c</columns>
    <columns>ProductSubType__c</columns>
    <columns>SortNr__c</columns>
    <columns>SuperiorProduct__c</columns>
    <columns>ProjectManagementAllowanceProduct__c</columns>
    <columns>ExpenseAllowanceProduct__c</columns>
    <columns>Option__c</columns>
    <columns>Legal__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Legal__c</field>
        <operation>equals</operation>
        <value>HBC</value>
    </filters>
    <label>HBC - BRAND DESIGN</label>
    <language>en_US</language>
</ListView>